--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherApp">
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".view.SearchLocationActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
