update daily forecast detail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:allowBackup="true"
         android:usesCleartextTraffic="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_foreground"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -15,6 +15,9 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".view.SearchLocationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.DailyForecastActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
