--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,5 @@ dependencies {
     implementation "androidx.room:room-paging:2.4.2"
 
     implementation 'androidx.paging:paging-compose:1.0.0-alpha15'
-
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
 }
